k8s/caddy/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: caddy
  namespace: ${NAMESPACE}
  labels:
    k8s-app: caddy
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: caddy
  template:
    metadata:
      labels:
        k8s-app: caddy
    spec:
      containers:
        - name: caddy
          image: eu.gcr.io/${GCR_PROJECT_IMAGE}/${GCR_FOLDER_IMAGE}/caddy:${GCR_TAG_IMAGE}
          resources:
            requests:
              cpu: 50m
              memory: 50Mi
            limits:
              cpu: 100m
              memory: 100Mi
          ports:
            - name: https
              containerPort: 443
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /
              port: 443
              scheme: HTTPS
            initialDelaySeconds: 10
            timeoutSeconds: 10
