k8s/caddy/service.yml
apiVersion: v1
kind: Service
metadata:
  name: caddy
  namespace: ${NAMESPACE}
  labels:
    k8s-app: caddy
  annotations:
    cloud.google.com/neg: '{"ingress": false}'
    cloud.google.com/app-protocols: '{"https-port":"HTTPS"}'
spec:
  type: NodePort
  ports:
    - name: https-port
      port: 443
      targetPort: 443
      protocol: 'TCP'
  selector:
    k8s-app: caddy
